--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--accent-color);
+    color: #4d5ae5;
 }
 .logo.link {
     text-decoration: none;
@@ -181,7 +181,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    color: var(--accent-color);
+    color: #4d5ae5;
     background-color: var(--background-color-cloud);
     cursor: pointer;
 }
