final-final changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root {
+    --accent-color: #4d5ae5;
     --primary-text-color: #434455;
     --title-text-color: #2E2F42;
-    --accent-color: #4D5AE4;
     --background-color-main: white;
     --background-color-dark: #2E2F42;
     --background-color-cloud: #F4F4FD;
