--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --accent-color: #4d5ae5;
+    --brand-color: #4d5ae5;
     --primary-text-color: #434455;
     --title-text-color: #2E2F42;
     --background-color-main: white;
@@ -24,18 +24,18 @@ body {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color:var(--accent-color);
+    color: var(--brand-color);
 }
+
 .logo.link {
     text-decoration: none;
 }
-
 .second-part {
     color: var(--title-text-color);
 }
 
 .logo:hover {
-    color: var(--accent-color);
+    color: var(--brand-color);
 }
 
 .link {
@@ -181,7 +181,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    color:var(--accent-color);
+    color: var(--brand-color);
     background-color: var(--background-color-cloud);
     cursor: pointer;
 }
